tests/spec/emit/snapshots/slice_of_bools.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> Slice<bool> {
    [true, false, true]
  }
---
package main

func test() []bool {
	return []bool{true, false, true}
}
