tests/spec/emit/snapshots/slice_of_ints.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> Slice<int> {
    [1, 2, 3]
  }
---
package main

func test() []int {
	return []int{1, 2, 3}
}
