tests/spec/emit/snapshots/slice_of_map_equals.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Slice<Map<string, int>>, b: Slice<Map<string, int>>) -> bool {
    a.equals(b)
  }
---
package main

import (
	"maps"
	"slices"
)

func test(a, b []map[string]int) bool {
	return slices.EqualFunc(a, b, func(a_1 map[string]int, b_1 map[string]int) bool { return maps.Equal(a_1, b_1) })
}
