tests/spec/emit/snapshots/slice_of_option_interface.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  interface Printable {
    fn to_string() -> string
  }
  
  struct Text { content: string }
  struct Number { value: int }
  
  impl Text {
    fn to_string(self) -> string { self.content }
  }
  
  impl Number {
    fn to_string(self) -> string { "number" }
  }
  
  fn test() {
    let items: Slice<Option<Printable>> = [
      Some(Text { content: "hello" }),
      Some(Number { value: 42 }),
    ]
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Printable interface {
	toString() string
}

type Text struct {
	content string
}

type Number struct {
	value int
}

func (t Text) toString() string {
	return t.content
}

func (n Number) toString() string {
	return "number"
}

func test() {
	_ = []lisette.Option[Printable]{
		lisette.MakeOptionSome[Printable](Text{content: "hello"}),
		lisette.MakeOptionSome[Printable](Number{value: 42}),
	}
}
