tests/spec/emit/snapshots/slice_pattern_match.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    let arr = [1, 2, 3];
    match arr {
      [a, b, c] => a + b + c,
      _ => 0,
    }
  }
---
package main

func test() int {
	arr := []int{1, 2, 3}
	if len(arr) == 3 {
		return arr[0] + arr[1] + arr[2]
	}
	return 0
}
