tests/spec/emit/snapshots/slice_pattern_match_with_rest.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    let arr = [1, 2, 3, 4, 5];
    match arr {
      [first, ..rest] => first + rest[0],
      [] => 0,
    }
  }
---
package main

func test() int {
	arr := []int{1, 2, 3, 4, 5}
	if len(arr) >= 1 {
		return arr[0] + arr[1:][0]
	}
	return 0
}
