tests/spec/emit/snapshots/slice_pattern_rest_or_pattern.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum E { A(Slice<int>), B(Slice<int>) }
  
  fn test(e: E) -> int {
    let E.A([first, ..rest]) | E.B([first, ..rest]) = e else { return 0; };
    first
  }
---
package main

func MakeEA(arg0 []int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 []int) E {
	return E{Tag: EB, B: arg0}
}

type ETag uint8

const (
	EA ETag = iota
	EB
)

type E struct {
	Tag ETag
	A   []int
	B   []int
}

func test(e E) int {
	var first int
	if e.Tag == EA && len(e.A) >= 1 {
		first = e.A[0]
	} else if e.Tag == EB && len(e.B) >= 1 {
		first = e.B[0]
	} else {
		return 0
	}
	return first
}
