tests/spec/emit/snapshots/slice_pattern_unused_rest.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test(nums: Slice<int>) -> int {
    match nums {
      [first, ..rest] => first,
      _ => 0,
    }
  }
---
package main

func test(nums []int) int {
	if len(nums) >= 1 {
		return nums[0]
	}
	return 0
}
