tests/spec/emit/snapshots/slice_range_capped_callable_bounds_eval_order.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn start() -> int { 1 }
  fn end() -> int { 3 }
  
  fn test() -> int {
    let xs = [10, 20, 30, 40]
    let ys = xs[start()..end()]
    ys.length()
  }
---
package main

func start() int {
	return 1
}

func end() int {
	return 3
}

func test() int {
	xs := []int{10, 20, 30, 40}
	start_1 := start()
	end_1 := end()
	ys := xs[start_1:end_1:end_1]
	return len(ys)
}
