tests/spec/emit/snapshots/slice_range_capped_open_base_evaluated_once.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_items() -> Slice<int> { [10, 20, 30] }
  
  fn test() -> int {
    let ys = make_items()[1..]
    ys.length()
  }
---
package main

func makeItems() []int {
	return []int{10, 20, 30}
}

func test() int {
	base := makeItems()
	len_1 := len(base)
	ys := base[1:len_1:len_1]
	return len(ys)
}
